consertando bug de overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,4 @@
 
 body {
   background-color: #212529;
-  overflow: hidden;
 }
